# LearnNet

./: .gitignore  LICENSE  Pipfile  Procfile  README.md  app.py  helpers.py  pyproject.toml  requirements.txt  run.py
learn_net/: __init__.py  errors.py  forms.py  helpers.py  models.py  routes.py
learn_net/static/scripts/: edit_button.js  greeter.js  route_button.js
learn_net/static/styles/: account_page.css  styles.css
learn_net/static/user_kits/4/: data.docx
learn_net/templates/: account.html  browse.html  create_kit.html  edit_account.html  edit_kit.html  index.html  kits.html  layout.html  search_results.html  signin.html  signup.html  upload.html  view_kit.html
open_ed_web/: __init__.py  forms.py  helpers.py  models.py  routes.py
open_ed_web/static/styles/: account_page.css  styles.css
open_ed_web/templates/: account.html  index.html  layout.html  signin.html  signup.html
static/scripts/: validate.js
static/styles/: styles.css
templates/: index.html  layout.html
