[tool.poetry]
name = "learn_net"
version = "0.1.0"
description = ""
authors = ["francisdbillones <francisd.billones@gmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.8"
attrs = "^21.2.0"
bcrypt = "^3.2.0"
blinker = "^1.4"
boto3 = "^1.17.73"
botocore = "^1.20.73"
cachelib = "^0.1.1"
cffi = "^1.14.5"
click = "^8.0.0"
cryptography = "^3.4.7"
dnspython = "^2.1.0"
email-validator = "^1.1.2"
Flask-Bcrypt = "^0.7.1"
Flask-Login = "^0.5.0"
Flask-Mail = "^0.9.1"
Flask-Session = "^0.3.2"
Flask-SQLAlchemy = "^2.5.1"
Flask-User = "^1.0.2"
Flask-WTF = "^0.14.3"
Flask = "^2.0.0"
gevent = "^21.1.2"
greenlet = "^1.1.0"
gunicorn = "^20.1.0"
idna = "^3.1"
iniconfig = "^1.1.1"
itsdangerous = "^2.0.0"
Jinja2 = "^3.0.0"
jmespath = "^0.10.0"
MarkupSafe = "^2.0.0"
packaging = "^20.9"
passlib = "^1.7.4"
Pillow = "^8.2.0"
pluggy = "^0.13.1"
psycopg2-binary = "^2.8.6"
py = "^1.10.0"
pycparser = "^2.20"
pyparsing = "^2.4.7"
pytest = "^6.2.4"
python-dateutil = "^2.8.1"
s3transfer = "^0.4.2"
six = "^1.16.0"
SQLAlchemy = "^1.4.15"
toml = "^0.10.2"
tqdm = "^4.60.0"
urllib3 = "^1.26.4"
Werkzeug = "^2.0.0"
WTForms = "^2.3.3"
"zope.event" = "^4.5.0"
"zope.interface" = "^5.4.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
